--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "version": "0.1.0",
   "author": "Jannik Buschke",
   "dependencies": {
-    "antd": "3.15.0",
+    "@mdx-js/mdx": "1.0.10",
+    "@mdx-js/react": "1.0.6",
+    "@mdx-js/tag": "0.20.3",
+    "gatsby-mdx": "0.6.2",
+    "antd": "3.16.3",
     "gatsby": "2.1.37",
     "gatsby-cli": "2.4.16",
     "gatsby-image": "2.0.34",
@@ -19,6 +23,8 @@
     "gatsby-transformer-json": "2.1.11",
     "gatsby-transformer-remark": "2.3.4",
     "gatsby-transformer-sharp": "2.1.17",
+    "gatsby-remark-prismjs": "3.2.8",
+    "prismjs": "1.16.0",
     "react": "16.8.4",
     "react-dom": "16.8.4",
     "react-helmet": "5.2.0",
