--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "build": "gatsby build --prefix-paths",
     "develop": "gatsby develop",
     "start": "npm run develop",
-    "format": "prettier --write \"src/**/*.js\"",
+    "format": "prettier --write \"./**/*.[jt]s?(x)\" \"./**/*.md\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
