Browser List compatability addition

--- a/package.json
+++ b/package.json
@@ -34,6 +34,18 @@
   "keywords": [
     "gatsby"
   ],
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "license": "MIT",
   "scripts": {
     "build": "gatsby build --prefix-paths",
