--- a/package.json
+++ b/package.json
@@ -4,26 +4,28 @@
   "version": "0.1.0",
   "author": "Jannik Buschke",
   "dependencies": {
-    "@mdx-js/mdx": "1.4.3",
-    "@mdx-js/react": "1.4.3",
+    "@mdx-js/mdx": "1.4.4",
+    "@mdx-js/react": "1.4.4",
     "@mdx-js/tag": "0.20.3",
     "antd": "3.23.1",
-    "gatsby": "2.15.7",
+    "gatsby": "2.13.65",
     "gatsby-cli": "2.7.44",
     "gatsby-image": "2.2.17",
-    "gatsby-mdx": "0.6.2",
-    "gatsby-plugin-manifest": "2.2.13",
-    "gatsby-plugin-offline": "3.0.2",
+    "gatsby-plugin-manifest": "2.2.14",
+    "gatsby-plugin-mdx": "1.0.39",
+    "gatsby-plugin-offline": "3.0.3",
     "gatsby-plugin-react-helmet": "3.1.6",
-    "gatsby-plugin-sharp": "2.2.19",
+    "gatsby-plugin-sharp": "2.2.20",
     "gatsby-plugin-typescript": "2.1.6",
     "gatsby-remark-autolink-headers": "2.1.9",
-    "gatsby-remark-katex": "2.0.6",
+    "gatsby-remark-images": "3.1.20",
+    "gatsby-remark-katex": "3.1.7",
     "gatsby-remark-prismjs": "3.3.12",
     "gatsby-source-filesystem": "2.1.21",
     "gatsby-transformer-json": "2.2.7",
-    "gatsby-transformer-remark": "2.6.21",
+    "gatsby-transformer-remark": "^2.6.21",
     "gatsby-transformer-sharp": "2.2.13",
+    "katex": "0.11.0",
     "prismjs": "1.17.1",
     "react": "16.9.0",
     "react-dom": "16.9.0",
@@ -35,12 +37,12 @@
     "gatsby"
   ],
   "browserslist": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all",
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+    ">0.2%",
+    "not dead",
+    "not op_mini all",
+    "last 1 chrome version",
+    "last 1 firefox version",
+    "last 1 safari version"
   ],
   "license": "MIT",
   "scripts": {
