--- a/package.json
+++ b/package.json
@@ -4,34 +4,35 @@
   "version": "0.3.0",
   "author": "Jannik Buschke",
   "dependencies": {
-    "@mdx-js/mdx": "1.6.16",
-    "@mdx-js/react": "1.6.16",
+    "@mdx-js/mdx": "1.6.22",
+    "@mdx-js/react": "1.6.22",
     "@mdx-js/tag": "0.20.3",
-    "antd": "4.2.2",
-    "gatsby": "2.24.51",
-    "gatsby-cli": "2.12.89",
-    "gatsby-image": "2.4.16",
-    "gatsby-plugin-manifest": "2.4.25",
-    "gatsby-plugin-mdx": "1.2.36",
-    "gatsby-plugin-offline": "3.2.25",
-    "gatsby-plugin-react-helmet": "3.3.10",
-    "gatsby-plugin-sharp": "2.6.29",
-    "gatsby-plugin-typescript": "2.4.18",
-    "gatsby-remark-autolink-headers": "2.3.11",
-    "gatsby-remark-images": "3.3.27",
-    "gatsby-remark-katex": "3.3.10",
-    "gatsby-remark-prismjs": "3.5.11",
-    "gatsby-source-filesystem": "2.3.26",
-    "gatsby-transformer-json": "2.4.11",
-    "gatsby-transformer-remark": "2.8.30",
-    "gatsby-transformer-sharp": "2.5.13",
-    "katex": "0.11.1",
-    "prismjs": "1.21.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-helmet": "5.2.1",
-    "react-responsive": "6.1.1",
-    "react-sizeme": "2.6.12"
+    "antd": "4.16.8",
+    "esbuild": "0.12.15",
+    "gatsby": "3.10.1",
+    "gatsby-cli": "^3.10.0",
+    "gatsby-image": "3.10.0",
+    "gatsby-plugin-manifest": "3.10.0",
+    "gatsby-plugin-mdx": "2.10.0",
+    "gatsby-plugin-offline": "4.10.0",
+    "gatsby-plugin-react-helmet": "4.10.0",
+    "gatsby-plugin-sharp": "3.10.2",
+    "gatsby-plugin-typescript": "3.10.0",
+    "gatsby-remark-autolink-headers": "4.7.0",
+    "gatsby-remark-images": "5.7.0",
+    "gatsby-remark-katex": "5.7.0",
+    "gatsby-remark-prismjs": "5.7.0",
+    "gatsby-source-filesystem": "3.10.0",
+    "gatsby-transformer-json": "3.10.0",
+    "gatsby-transformer-remark": "4.7.0",
+    "gatsby-transformer-sharp": "3.10.0",
+    "katex": "0.13.13",
+    "prismjs": "1.24.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-helmet": "6.1.0",
+    "react-responsive": "8.2.0",
+    "react-sizeme": "3.0.1"
   },
   "keywords": [
     "gatsby"
@@ -51,16 +52,17 @@
     "start": "npm run develop",
     "format": "prettier --write \"./**/*.[jt]s?(x)\" \"./**/*.md\" \"./**/*.json\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
+    "clean": "gatsby clean"
   },
   "devDependencies": {
-    "gatsby-plugin-remove-trailing-slashes": "2.3.2",
-    "gh-pages": "2.2.0",
-    "prettier": "2.0.5",
-    "@types/node": "12.7.4",
-    "@types/react": "16.9.35",
-    "@types/react-dom": "16.9.8",
-    "@types/react-helmet": "5.0.9"
+    "@types/node": "^16.4.2",
+    "@types/react": "17.0.15",
+    "@types/react-dom": "17.0.9",
+    "@types/react-helmet": "6.1.2",
+    "gatsby-plugin-remove-trailing-slashes": "3.10.0",
+    "gh-pages": "^3.2.3",
+    "prettier": "2.3.2"
   },
   "repository": {
     "type": "git",
