--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-transformer-remark": "4.7.0",
     "gatsby-transformer-sharp": "3.10.0",
     "katex": "0.13.13",
+    "mdx-bundler": "^5.1.2",
     "prismjs": "1.24.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
