--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
     "@mdx-js/tag": "0.20.3",
     "antd": "4.16.8",
     "esbuild": "0.12.15",
-    "gatsby": "3.10.1",
-    "gatsby-cli": "^3.10.0",
+    "gatsby": "alpha-9689ff",
+    "gatsby-cli": "alpha-9689ff",
     "gatsby-image": "3.10.0",
-    "gatsby-plugin-manifest": "3.10.0",
-    "gatsby-plugin-mdx": "2.10.0",
-    "gatsby-plugin-offline": "4.10.0",
-    "gatsby-plugin-react-helmet": "4.10.0",
-    "gatsby-plugin-sharp": "3.10.2",
-    "gatsby-plugin-typescript": "3.10.0",
+    "gatsby-plugin-manifest": "alpha-9689ff",
+    "gatsby-plugin-mdx": "alpha-9689ff",
+    "gatsby-plugin-offline": "alpha-9689ff",
+    "gatsby-plugin-react-helmet": "alpha-9689ff",
+    "gatsby-plugin-sharp": "alpha-9689ff",
+    "gatsby-plugin-typescript": "alpha-9689ff",
     "gatsby-remark-autolink-headers": "4.7.0",
-    "gatsby-remark-images": "5.7.0",
-    "gatsby-remark-katex": "5.7.0",
-    "gatsby-remark-prismjs": "5.7.0",
-    "gatsby-source-filesystem": "3.10.0",
-    "gatsby-transformer-json": "3.10.0",
-    "gatsby-transformer-remark": "4.7.0",
-    "gatsby-transformer-sharp": "3.10.0",
+    "gatsby-remark-images": "alpha-9689ff",
+    "gatsby-remark-katex": "alpha-9689ff",
+    "gatsby-remark-prismjs": "alpha-9689ff",
+    "gatsby-source-filesystem": "alpha-9689ff",
+    "gatsby-transformer-json": "alpha-9689ff",
+    "gatsby-transformer-remark": "alpha-9689ff",
+    "gatsby-transformer-sharp": "alpha-9689ff",
     "katex": "0.13.13",
     "prismjs": "1.24.1",
     "react": "17.0.2",
