--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
     "@mdx-js/tag": "0.20.3",
     "antd": "4.16.8",
     "esbuild": "0.12.15",
-    "gatsby": "3.10.1",
-    "gatsby-cli": "^3.10.0",
-    "gatsby-image": "3.10.0",
-    "gatsby-plugin-manifest": "3.10.0",
-    "gatsby-plugin-mdx": "2.10.0",
-    "gatsby-plugin-offline": "4.10.0",
-    "gatsby-plugin-react-helmet": "4.10.0",
-    "gatsby-plugin-sharp": "3.10.2",
-    "gatsby-plugin-typescript": "3.10.0",
-    "gatsby-remark-autolink-headers": "4.7.0",
-    "gatsby-remark-images": "5.7.0",
-    "gatsby-remark-katex": "5.7.0",
-    "gatsby-remark-prismjs": "5.7.0",
-    "gatsby-source-filesystem": "3.10.0",
-    "gatsby-transformer-json": "3.10.0",
-    "gatsby-transformer-remark": "4.7.0",
-    "gatsby-transformer-sharp": "3.10.0",
+    "gatsby": "^4.0.0",
+    "gatsby-cli": "^4.0.0",
+    "gatsby-plugin-image": "^2.0.0",
+    "gatsby-plugin-manifest": "^4.0.0",
+    "gatsby-plugin-mdx": "^3.0.0",
+    "gatsby-plugin-offline": "^5.0.0",
+    "gatsby-plugin-react-helmet": "^5.0.0",
+    "gatsby-plugin-sharp": "^4.0.0",
+    "gatsby-plugin-typescript": "^4.0.0",
+    "gatsby-remark-autolink-headers": "^5.0.0",
+    "gatsby-remark-images": "^6.0.0",
+    "gatsby-remark-katex": "^6.0.0",
+    "gatsby-remark-prismjs": "^6.0.0",
+    "gatsby-source-filesystem": "^4.0.0",
+    "gatsby-transformer-json": "^4.0.0",
+    "gatsby-transformer-remark": "^5.0.0",
+    "gatsby-transformer-sharp": "^4.0.0",
     "katex": "0.13.13",
     "prismjs": "1.24.1",
     "react": "17.0.2",
@@ -49,6 +49,7 @@
   "scripts": {
     "build": "gatsby build --prefix-paths",
     "develop": "gatsby develop",
+    "serve": "gatsby serve",
     "start": "npm run develop",
     "format": "prettier --write \"./**/*.[jt]s?(x)\" \"./**/*.md\" \"./**/*.json\"",
     "test": "echo \"Error: no test specified\" && exit 1",
